main.css
:root {
    --dark-gray: #222725;
    --light-seaweed: #7adfbbff;
}

@font-face {
    font-family: "Karantina Light";
    src: url(fonts/Karantina-Light.ttf);
    font-weight: 300;
}

@font-face {
    font-family: "Karantina Regular";
    src: url(fonts/Karantina-Regular.ttf);
    font-weight: 400;
}

@font-face {
    font-family: "Karantina Bold";
    src: url(fonts/Karantina-Bold.ttf);
    font-weight: 700;
}

* {
    box-sizing: border-box;
}

body {
    display: flex;
    justify-content: center;
    align-items: center;
    font-family: "Karantina Regular";
    height: 100vh;
    width: 100vw;
    margin: 0;
    color: var(--dark-gray);
    background-color: #7ADFBB;
    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width='100%25' height='100%25'%3E%3Cdefs%3E%3Cpattern id='p' width='100' height='100' patternUnits='userSpaceOnUse' patternTransform='scale(0.11)'%3E%3Ccircle id='a' data-color='outline' fill='none' stroke='%23222725' stroke-width='9.79' r='.5'%3E%3C/circle%3E%3Cuse xlink:href='%23a' y='100'%3E%3C/use%3E%3Cuse xlink:href='%23a' x='100'%3E%3C/use%3E%3Cuse xlink:href='%23a' x='100' y='100'%3E%3C/use%3E%3Cuse xlink:href='%23a' x='50' y='50'%3E%3C/use%3E%3C/pattern%3E%3C/defs%3E%3Crect fill='url(%23p)' width='100%25' height='100%25'%3E%3C/rect%3E%3C/svg%3E");
    background-size: 200%;
    background-repeat: no-repeat;
    overflow: hidden;
    animation: pattern-slide linear 25s infinite forwards;
}

.curtain {
    position: fixed;
    inset: 0;
    background-color: var(--light-seaweed);
    transition: ease .5s opacity;
    transition-delay: .2s;
}

.curtain.hidden {
    opacity: 0;
}

.title, .tagline {
    background-color: var(--light-seaweed);
}

.title-container {
    position: relative;
}

.title {
    font-family: "Karantina Regular";
    font-size: 11rem;
    line-height: 0.7;
    padding-left: 15px;
    padding-right: 15px;
    transform: translateX(100vw);
    transition: transform ease-out .5s;
}

.title.visible {
    transform: translateX(0);
}

.tagline {
    position: absolute;
    width: fit-content;
    left: 50%;
    bottom: 0;
    font-size: 3.9rem;
    letter-spacing: 1px;
    padding-bottom: 5px;
    padding-left: 16px;
    padding-right: 16px;
    transform: translateY(0) translateX(-50%);
    transition: ease .7s .5s;
    opacity: 0;
    z-index: -1;
}

.tagline.visible {
    opacity: 1;
    transform: translateY(100%) translateX(-50%);
}

.container {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
    height: 100%;
}

.container a {
    font-family: "Karantina Light";
    font-size: 3rem;
    letter-spacing: 1px;
    color: white;
    background-color: var(--dark-gray);
    margin-bottom: 1rem;
    padding: 10px 33px 14px;
    text-decoration: none;
}

.container a.cta {
    color: inherit;
    background-color: white;
}

.container a:last-child {
    margin-bottom: 0;
}


.inner {
    display: flex;
    flex-direction: column;
    text-align: center;
    transform: translate(10px, 10px);
}

.inner a {
    opacity: 0;
    transition: ease .1s;
}

.inner.visible a {
    opacity: 1;
    animation: grow ease .3s 1 forwards;
}

.inner.visible a:nth-child(1) {
    transition-delay: .2s;
    animation-delay: .2s;
}

.inner.visible a:nth-child(2) {
    transition-delay: .3s;
    animation-delay: .3s;
}

.inner.visible a:nth-child(3) {
    transition-delay: .4s;
    animation-delay: .4s;
}

@media (max-height: 620px) {
    .title {
        font-size: 8rem;
    }

    .tagline {
        font-size: 2.7rem;
    }
}

@keyframes pattern-slide {
    0% {
        background-position: 0 0;
    }
    100% {
        background-position: 100% 100%;
    }
}

@keyframes grow {
    0% {
        transform: translate(0, 0);
        box-shadow: 0;
    }

    50% {
        transform: translate(-15px, -15px);
        box-shadow: 15px 15px 0 #1F7A8C;
    }

    100% {
        transform: translate(-10px, -10px);
        box-shadow: 10px 10px 0 #1F7A8C;
    }
}

